broadaJs-1 整合bootstrap 封装grid视图组件

--- a/app/usersMgr/index.html
+++ b/app/usersMgr/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../../resource/css/bootstrap-responsive.css">
 
     <link rel="stylesheet/less" href="less/main.less">
+    <script src="../../resource/jslib/less.js"></script>
     <!--<link rel="stylesheet" href="css/main.css">-->
 
     <script src="../../resource/jslib/modernizr-2.6.2.min.js"></script>
@@ -146,185 +147,11 @@
                     </div>
                 </div>
 
-                <table class="table table-bordered table-hover bj-app-table">
-                    <thead>
-                    <tr>
-                        <th><input type="checkbox"></th>
-                        <th>用户名</th>
-                        <th>登录帐号</th>
-                        <th>联系电话</th>
-                        <th>移动电话</th>
-                        <th>电子邮件</th>
-                        <th>业务单位</th>
-                        <th>部门</th>
-                        <th>职位</th>
-                        <th>状态</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>顶级管理员</td>
-                        <td>admin</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td>默认机构</td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>顶级审计员</td>
-                        <td>auditor</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>顶级安全员</td>
-                        <td>secman</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>服务申请人</td>
-                        <td>server1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td>服务目录组</td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>作业计划员</td>
-                        <td>task1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td>作业处理组</td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-warning">过期</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-warning">过期</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-warning">过期</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>demo</td>
-                        <td>demo</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>顶级业务单位</td>
-                        <td></td>
-                        <td></td>
-                        <td><span class="label label-success">正常</span></td>
-                    </tr>
-                    </tbody>
-                </table>
+                {{view UserMgr.Grid}}
             </div>
         </div>
     </div>
 </script>
-
 <script src="../../resource/jslib/require.min.js"></script>
 <script>
     require.config({
@@ -335,10 +162,11 @@
         shim:{
             'jslib/bootstrap':['jslib/jquery'],
             'jslib/ember':['jslib/jquery', 'jslib/handlebars'],
+            'jslib/ember.rest':['jslib/ember'],
             'jslib/broada/bsview/bsview':['jslib/ember', 'jslib/bootstrap']
         }
     });
-    require(["jslib/less","app"]);
+    require(["app"]);
 </script>
 </body>
 </html>
