broadaJs-1 整合bootstrap userform视图

--- a/app/usersMgr/index.html
+++ b/app/usersMgr/index.html
@@ -146,7 +146,7 @@
                         <button class="btn">分配角色</button>
                     </div>
                 </div>
-                {{outlet}}
+                {{outlet masterView}}
             </div>
         </div>
     </div>
