--- a/app/usersMgr/index.html
+++ b/app/usersMgr/index.html
@@ -82,44 +82,61 @@
                             <button class="btn bj-btn-success btn-mini" {{action "filterByStatus" target="controller"}}>正常</button>
                             <button class="btn bj-btn-warning btn-mini" {{action "filterByStatus" target="controller"}}>失效</button>
                         </div>
-                        <div id="form_search" class="input-prepend input-append">
-                            <input class="span3" type="text" size="16" placeholder="用户名、登录帐号">
-                            <button class="btn" type="button">
+                        <form id="form_search" class="input-prepend input-append">
+                            {{view Ember.TextField size="16" class="span3"  placeholder="用户名、登录帐号"
+                                    valueBinding="queryOpt.username"}}
+                            <button class="btn" type="button" {{action "simpleQuery" target="controller"}}>
                                 <i class="icon-search"></i>
                             </button>
                             <button class="btn" type="button"
                                     data-toggle="collapse" data-target="#form_moreOptSearch">
                                 更多查询条件</button>
-                        </div>
+                        </form>
                         <form id="form_moreOptSearch" class="row-fluid collapse">
                             <div class="row-fluid">
                                 <label class="span2">登录帐号</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.account"}}
+                                </div>
                                 <label class="span2">电子邮箱</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.email"}}
+                                </div>
                             </div>
                             <div class="row-fluid">
                                 <label class="span2">用户名</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.username"}}
+                                </div>
                                 <label class="span2">联系电话</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.telephoneNum"}}
+                                </div>
                             </div>
                             <div class="row-fluid">
                                 <label class="span2">职位</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.position"}}
+                                </div>
                                 <label class="span2">部门</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.department"}}
+                                </div>
                             </div>
                             <div class="row-fluid">
                                 <label class="span2">状态</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.status"}}
+                                </div>
                                 <label class="span2">移动电话</label>
-                                <div class="span4"><input type="text" size="16"></div>
+                                <div class="span4">
+                                    {{view Ember.TextField size="16" valueBinding="queryOpt.mobilePhoneNum"}}
+                                </div>
                             </div>
                             <div class="row-fluid">
-                                <button class="btn btn-primary">查询</button>
+                                <button class="btn btn-primary" {{action "queryUsers" target="controller"}}>查询</button>
                                 <a class="btn" data-toggle="collapse"
-                                   data-target="#form_moreOptSearch">取消</a>
+                                   data-target="#form_moreOptSearch" {{action "cancelQuery" target="controller"}}>取消</a>
                             </div>
                         </form>
                     </div>
