--- a/apps/templateApp/index.html
+++ b/apps/templateApp/index.html
@@ -39,8 +39,7 @@
         shim:{
             'jslib/bootstrap':['jslib/jquery'],
             'jslib/ember':['jslib/jquery', 'jslib/handlebars'],
-            'jslib/ember.rest':['jslib/ember'],
-            'jslib/broada/bsview/bsview':['jslib/ember', 'jslib/bootstrap']
+            'jslib/ember.rest':['jslib/ember']
         }
     });
     require(["app"]);
