--- a/apps/usersMgr/index.html
+++ b/apps/usersMgr/index.html
@@ -160,7 +160,21 @@
                             </ul>
                         </div>
                         <button class="btn" {{action "gotoEditUser" target="controller"}}>编辑</button>
-                        <button class="btn" {{action "deleteUser" target="controller"}}>删除</button>
+                        <button class="btn"
+                        {{action "reconfirmDelete" target="controller"}}>删除</button>
+                    </div>
+                </div>
+                <div class="modal hide" id="myModal">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h3 id="myModalLabel">警告</h3>
+                    </div>
+                    <div class="modal-body">
+                        <p>确定删除吗?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
+                        <button class="btn btn-primary" {{action "deleteUser" target="controller"}}>确定</button>
                     </div>
                 </div>
                 {{outlet masterView}}
