--- a/apps/usersMgr/index.html
+++ b/apps/usersMgr/index.html
@@ -16,7 +16,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link rel="stylesheet" href="../../resource/css/bootstrap.css">
-    <link rel="stylesheet" href="../../resource/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="../../resource/css/jquery-ui-1.9.2.custom.css">
 
     <link rel="stylesheet/less" href="less/main.less">
     <script src="../../resource/jslib/less.js"></script>
@@ -27,9 +27,6 @@
 </head>
 <body class="userMgr">
 <script type="text/x-handlebars" data-template-name='application'>
-    {{#if person}}
-    Welcome back, <b>{{person.firstName}} {{person.lastName}}</b>!
-    {{/if}}
     <div class="container-fluid testHeight">
         <div class="row-fluid">
             <div class="span3">
